--- a/libvpu_wrapper.pc.in
+++ b/libvpu_wrapper.pc.in
@@ -1,7 +1,7 @@
 prefix=@prefix@
 exec_prefix=@exec_prefix@
 libdir=@libdir@
-includedir=@includedir@/imx-mm
+includedir=@includedir@/imx-mm/vpu
 
 Name: VPU wrapper for imx vpu
 Description: Providing standard video encode/decode interface
