[EULA.txt] add to vpuwrapper package
Signed-off-by: linaro <linaro@linaro-ubuntu-desktop.(none)>

--- a/Makefile.am
+++ b/Makefile.am
@@ -23,7 +23,8 @@ libfslvpuwrap_la_LIBTOOLFLAGS = --tag=CC
 libfslvpuwrapdocdir = $(docdir)/imx-mm/vpu
 libfslvpuwrapdoc_DATA = \
     docs/vpu_dec_datasheet.pdf    \
-    docs/vpu_enc_datasheet.pdf
+    docs/vpu_enc_datasheet.pdf    \
+    docs/EULA.txt
 
 pcverfile = libfslvpuwrap.pc
 
