--- a/configure.ac
+++ b/configure.ac
@@ -51,6 +51,14 @@ if test "x$HAVE_HANTRO_ENC_LIB" = "xyes"; then
 fi
 AM_CONDITIONAL(USE_HANTRO_ENC_LIB, test "x$HAVE_HANTRO_ENC_LIB" = "xyes")
 
+AC_CHECK_HEADERS([hantro_VC8000E_enc/ewl.h], [HAVE_HANTRO_VC8000E_ENC_LIB=yes], [HAVE_HANTRO_VC8000E_ENC_LIB=no])
+AC_MSG_WARN([HAVE_HANTRO_VC8000E_ENC_LIB $HAVE_HANTRO_VC8000E_ENC_LIB])
+if test "x$HAVE_HANTRO_VC8000E_ENC_LIB" = "xyes"; then
+   IMX_HANTRO_VC8000E_ENC_LIB="-lhantro_vc8000e"
+   HAVE_VPU=yes
+fi
+AM_CONDITIONAL(USE_HANTRO_VC8000E_ENC_LIB, test "x$HAVE_HANTRO_VC8000E_ENC_LIB" = "xyes")
+
 if test "x$HAVE_VPU" = "xno"; then
     AC_MSG_ERROR([no vpu headers stop building vpu_wrapper])
 fi
@@ -60,6 +68,7 @@ AC_SUBST(IMX_VPU_LIB)
 AC_SUBST(IMX_HANTRO_LIB)
 AC_SUBST(IMX_AMPHION_LIB)
 AC_SUBST(IMX_HANTRO_ENC_LIB)
+AC_SUBST(IMX_HANTRO_VC8000E_ENC_LIB)
 
 AC_OUTPUT([
 Makefile
