MMFMWK-8648 Add vpu wrapper unit test for i.MX8
Enable 8mm/8mq to support H264/HEVC byte-stream format decoding.
Enable 8mm to support H264 encoding.

Signed-off-by: Hou Qi <qi.hou@nxp.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -56,6 +56,8 @@ pkgconfig_DATA = $(pcverfile)
 
 libfslvpuwraptestdir = $(datadir)/imx-mm/video-codec/examples/vpu
 libfslvpuwraptest_DATA = \
+    Makefile_8mm    \
+    Makefile_8mq    \
     Makefile.unit   \
     decode_stream.h \
     decode_stream.c \
